# BiosignalDataAcquisition

./: CMakeLists.txt  README.md
include/: .BioSigAcquisition.h.swp  AcquisitionTab.h  BioSigAcquisition.h  DataAcquisitionDesignTab.h
src/: AcquisitionTab.cpp  BioSigAcquisition.cpp  DataAcquisitionDesignTab.cpp  main.cpp
